feat(api): endpoint de disponibilidade
